--- a/assets/sass/variables/_mixins.scss
+++ b/assets/sass/variables/_mixins.scss
@@ -18,8 +18,12 @@
 
 @mixin vertical-align {
   position: relative;
-  top: 50%;
+  top: 45%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+  
+	@include breakpoint($desk){ 
+		top: 50%; 
+	}
 }
